Condensation des informations et modification du CV

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -420,7 +420,7 @@ section {
 # Akills
 --------------------------------------------------------------*/
 .skills .progress {
-  height: 60px;
+  height: 200px;
   display: block;
   background: none;
   border-radius: 0;
@@ -428,7 +428,7 @@ section {
 
 .skills .progress .skill {
   padding: 0;
-  margin: 0 0 6px 0;
+  margin: 3px 30px 2px;
   text-transform: uppercase;
   display: block;
   font-weight: 600;
@@ -439,18 +439,6 @@ section {
 .skills .progress .skill .val {
   float: right;
   font-style: normal;
-}
-
-.skills .progress-bar-wrap {
-  background: #dce8f8;
-  height: 10px;
-}
-
-.skills .progress-bar {
-  width: 1px;
-  height: 10px;
-  transition: 0.9s;
-  background-color: #149ddd;
 }
 
 /*--------------------------------------------------------------
